--- a/template.html
+++ b/template.html
@@ -3,16 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template Title</title>
+    <title>Dylan Hampton - Web140</title>
+    <link rel="stylesheet" href="static/styles.css">
 </head>
-<body>
-    <h1>Template Header 1</h1>
-    <h2>Template Header 2</h2>
-    <p>Template Paragraph</p>
 
-    <div class="w3-validator">
-        <a href="https://validator.w3.org/" target="_blank" rel="noopener noreferrer">
-            <img src="images/html5-validator.png" alt="Valid HTML5!"/>
+<body>
+    <div class="header">
+        <div class="header-content">
+            <h1>Dylan Hampton</h1>
+            <h2>Web-140 - Web Development Tools</h2>
+        </div>
+        <div class="nav-links">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="contract.html">Contract</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+    <div class="center-container">
+        <p>Template Text</p>
+    </div>
+
+    <div class="html-validator">
+        <a href="http://validator.w3.org/check?uri=referer" target="_blank" rel="noopener noreferrer">
+            <img src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01" width="88" height="31" style="border:none">
+        </a>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank" rel="noopener noreferrer">
+            <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" width="88" height="31" style="border:none">
         </a>
     </div>
 </body>
