--- a/contract.html
+++ b/contract.html
@@ -38,11 +38,11 @@
     </main>
 
     <div class="html-validator">
-        <a href="https://validator.w3.org/" target="_blank" rel="noopener noreferrer">
-            <img src="images/W3C_HTML5_certified.png" alt="Valid HTML5!"/>
+        <a href="http://validator.w3.org/check?uri=referer" target="_blank" rel="noopener noreferrer">
+            <img src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01" width="88" height="31" style="border:none">
         </a>
-        <a href="https://jigsaw.w3.org/css-validator/" target="_blank" rel="noopener noreferrer">
-            <img src="images/W3C_CSS_certified.png" alt="Valid CSS!"/>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank" rel="noopener noreferrer">
+            <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" width="88" height="31" style="border:none">
         </a>
     </div>
 </body>
