--- a/contract.html
+++ b/contract.html
@@ -10,7 +10,7 @@
     <div class="header">
         <div class="header-content">
             <h1>Dylan Hampton</h1>
-            <h2>Web-140 - Web Development Tools</h2>
+            <h2>24FA-WEB140-N801 - Web Development Tools</h2>
         </div>
         <div class="nav-links">
             <nav>
@@ -38,10 +38,10 @@
     </main>
 
     <div class="html-validator">
-        <a href="http://validator.w3.org/check?uri=referer" target="_blank" rel="noopener noreferrer">
+        <a href="http://validator.w3.org/check?uri=https%3A%2F%2Fdkh01.github.io%2Fwebsite%2Fcontract.html" target="_blank" rel="noopener noreferrer">
             <img src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01" width="88" height="31" style="border:none">
         </a>
-        <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank" rel="noopener noreferrer">
+        <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fdkh01.github.io%2Fwebsite%2Fcontract.html" target="_blank" rel="noopener noreferrer">
             <img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" width="88" height="31" style="border:none">
         </a>
     </div>
