--- a/contract.html
+++ b/contract.html
@@ -24,7 +24,7 @@
 
     <main class="center-container">
         <p>
-            I, <b>Dylan Hampton</b>, agree to abide by the terms of the course contract in my <b>Summer 2024 24FA-WEB140-N801: Web Development Tools</b> with my instructor, <b>Professor Ella McManus.</b>.
+            I, <b>Dylan Hampton</b>, agree to abide by the terms of the course contract in my <b>Fall 2024 24FA-WEB140-N801: Web Development Tools</b> with my instructor, <b>Professor Ella McManus.</b>.
         </p>
         <p>
             I understand that all work that I do on my school and personal website will be publicly available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
